--- a/sass/parciales/_footer.scss
+++ b/sass/parciales/_footer.scss
@@ -33,46 +33,64 @@
             font-weight: 500
         }
     }
+    // .footer__redes{
+    //     @include conteiner-flex-row;
+    //     flex: 2;
+    //     align-items: center;
+    //     .redes__lista{
+    //         @include conteiner-flex-row;
+    //         justify-content: center;
+    //         width: 100%;
+    //         align-items: center;
+    //         .lista__item{
+    //             list-style: none;
+    //             align-items: center;
+    //             justify-content: center;
+    //             align-items: center;
+    //             padding: 1rem 1rem;
+    //             i{
+    //                 align-items: center;
+    //                 justify-content: center;
+    //                 color: black;
+    //                 background-color: yellow;
+    //                 width: 2rem;
+    //                 height: 2rem;
+    //                 border-radius: 0.5rem;
+    //                 font-size: 2rem;
+    //                 text-align: center;
+    //                 cursor: pointer;
+    //             }
+    //             i:hover{
+    //                 transition: 0.3s ease-in;
+    //                 font-size: 2.2rem;
+    //                 box-shadow: 0 0 5px yellow,
+    //                 0 0 25px yellow, 
+    //                 0 0 50px yellow, 
+    //                 0 0 100px yellow;
+                    
+    //             }
+    //         }
+    //     }
+
+    // }
+
     .footer__redes{
         @include conteiner-flex-row;
-        flex: 2;
-        align-items: center;
-        .redes__lista{
-            @include conteiner-flex-row;
+        width: 30em;
+        height: auto;
+        padding: 2rem;
+        .lista__item{
             justify-content: center;
-            width: 100%;
             align-items: center;
-            .lista__item{
-                list-style: none;
-                align-items: center;
-                justify-content: center;
-                align-items: center;
-                padding: 1rem 1rem;
-                i{
-                    align-items: center;
-                    justify-content: center;
-                    color: black;
-                    background-color: yellow;
-                    width: 2rem;
-                    height: 2rem;
-                    border-radius: 0.5rem;
-                    font-size: 2rem;
-                    text-align: center;
-                    cursor: pointer;
-                }
-                i:hover{
-                    transition: 0.5s ease-in;
-                    font-size: 2.2rem;
-                    box-shadow: 0 0 5px yellow,
-                    0 0 25px yellow, 
-                    0 0 50px yellow, 
-                    0 0 100px yellow;
-                    
-                }
+            width: 4rem;
+            height: 4rem;
+            img{
+                width: 100%;
+                height: auto;
             }
         }
-
     }
+
     .footer__newsletter{
         @include conteiner-flex-column;
         flex: 1;
