--- a/sass/parciales/_socialProof.scss
+++ b/sass/parciales/_socialProof.scss
@@ -53,24 +53,24 @@
                 text-align: center;
             }
             button{
-                font-size: 1.2rem;
+                font-size: 1.2em;
                 font-weight: bold;
                 background-color: yellow;
-                border-radius: 0.5rem;
-                padding: 0.5rem 0.5rem;
+                border-radius: 0.5em;
+                padding: 0.5em 0.5em;
                 color: black;
                 cursor: pointer;
                 text-align: center;
                 text-transform: uppercase;
                 border: none;
+                transition: transform 0.3s ease-in;
             }
             .btn:hover{
-                transition: 0.5s ease-in;
-                font-size: 1.5rem;
+                transform: scale(1.1);
                 box-shadow: 0 0 5px yellow,
-                0 0 25px yellow, 
-                0 0 50px yellow, 
-                0 0 100px yellow;
+                0 0 20px yellow, 
+                0 0 40px yellow, 
+                0 0 20px yellow;
                 
             }
         }
