--- a/sass/parciales/_header.scss
+++ b/sass/parciales/_header.scss
@@ -7,6 +7,8 @@
     overflow: hidden;
         
     .header__promesa{
+        padding: 0.5em;
+        flex:2;
         width: 40rem;
         p{
             color: white;
@@ -19,13 +21,64 @@
         }
     }
 
+    .hedaer__btnCTA{
+        display: flex;
+        flex: 1;
+        justify-content: flex-start;
+        .btnCTA{
+            font-size: 1.2em;
+            font-weight: 500;
+            color: black;
+            background-color: yellow;
+            border-radius: 0.2em;
+            border: none;
+            padding: 0.2em;
+            cursor: pointer;
+            transition: transform 0.3s ease-in;
+            span{
+                text-transform: uppercase;
+                font-weight: bold;
+            }
+        }
+        .btnCTA:hover{
+            transform: scale(1.1);
+            box-shadow: 0 0 5px yellow,
+            0 0 20px yellow, 
+            0 0 40px yellow, 
+            0 0 20px yellow;
+            
+        }
+    }
+
     .header__timer{
-        font-weight: 500;
-        font-size: 1.5rem;
+        @include conteiner-flex-row;
+        justify-content: flex-start;
+        font-weight: 300;
         width: 15rem;
         color: white;
-
+        flex:2;
+        font-size: 2em;
         
+    }
+    #temporizador{
+        align-items: center;
+        text-align: center;
+        justify-content: flex-start;
+        .borde{
+            border: 2px solid white;
+            border-radius: 0.5rem;
+            margin: 0rem 1rem;
+            width: 5rem;
+            height: 5rem;
+            
+            .valor{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
     }
 }
     
