--- a/css/destino.css
+++ b/css/destino.css
@@ -17,7 +17,7 @@
   width: 100%;
   justify-content: space-around;
   height: 7rem;
-  background-image: url(/img/background.png);
+  background-image: url(../img/background.png);
   border-bottom: 0.1rem solid yellow;
   align-items: center;
   overflow: hidden; }
@@ -222,7 +222,7 @@
   flex-direction: row;
   width: 100%;
   justify-content: space-around;
-  background-image: url(/img/background.png);
+  background-image: url(../img/background.png);
   overflow: hidden;
   border-top: 0.1rem solid yellow; }
   .contenedor__footer .footer__info {
