--- a/sass/parciales/_footer.scss
+++ b/sass/parciales/_footer.scss
@@ -1,6 +1,6 @@
 .contenedor__footer{
     @include conteiner-flex-row;
-    background-image: url(/img/background.png);
+    background-image: url(../img/background.png);
     overflow: hidden;
     border-top: 0.1rem solid yellow;
     .footer__info{
