--- a/sass/parciales/_header.scss
+++ b/sass/parciales/_header.scss
@@ -1,7 +1,7 @@
 .contenedor__header{
     @include conteiner-flex-row;
     height: 7rem;
-    background-image: url(/img/background.png);
+    background-image: url(../img/background.png);
     border-bottom: 0.1rem solid yellow;
     align-items: center;
     overflow: hidden;
