--- a/sass/parciales/_mainPresentacion.scss
+++ b/sass/parciales/_mainPresentacion.scss
@@ -38,13 +38,21 @@
             img{
                 width: 100%;
                 height: auto;
+                border-radius: 50%;
+                transition: 0.2s ease-in;
+            }
+            img:hover{
+                box-shadow: 0 0 5px yellow,
+                0 0 20px yellow, 
+                0 0 40px yellow, 
+                0 0 20px yellow;
             }
         }
     }
     .vsl{
         padding: 5rem;
         iframe {
-            box-shadow: 0 0 70px 25px $color-elementos;
+            box-shadow: 0 0 65px 10px blue;
         }
     }
 
