--- a/css/destino.css
+++ b/css/destino.css
@@ -130,11 +130,15 @@
       height: 4rem; }
       .main__presentacion .redes .redes__item img {
         width: 100%;
-        height: auto; }
+        height: auto;
+        border-radius: 50%;
+        transition: 0.2s ease-in; }
+      .main__presentacion .redes .redes__item img:hover {
+        box-shadow: 0 0 5px yellow, 0 0 20px yellow,  0 0 40px yellow,  0 0 20px yellow; }
   .main__presentacion .vsl {
     padding: 5rem; }
     .main__presentacion .vsl iframe {
-      box-shadow: 0 0 70px 25px #204473; }
+      box-shadow: 0 0 65px 10px blue; }
 
 .main__socialProof {
   display: flex;
@@ -226,6 +230,7 @@
   overflow: hidden;
   border-top: 0.1rem solid yellow; }
   .contenedor__footer .footer__info {
+    padding: 0.1rem 0.1rem;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -260,17 +265,22 @@
     flex-direction: row;
     width: 100%;
     justify-content: space-around;
+    align-items: center;
     width: 30em;
     height: auto;
     padding: 2rem; }
     .contenedor__footer .footer__redes .lista__item {
       justify-content: center;
       align-items: center;
-      width: 4rem;
-      height: 4rem; }
+      width: 3rem;
+      height: 3rem; }
       .contenedor__footer .footer__redes .lista__item img {
         width: 100%;
-        height: auto; }
+        height: auto;
+        border-radius: 50%;
+        transition: 0.2s ease-in; }
+      .contenedor__footer .footer__redes .lista__item img:hover {
+        box-shadow: 0 0 5px yellow, 0 0 20px yellow,  0 0 40px yellow,  0 0 20px yellow; }
   .contenedor__footer .footer__newsletter {
     display: flex;
     flex-direction: column;
