--- a/css/destino.css
+++ b/css/destino.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -45,10 +46,9 @@
       border: none;
       padding: 0.2em;
       cursor: pointer;
-      transition: transform 0.3s ease-in; }
-      .contenedor__header .hedaer__btnCTA .btnCTA span {
-        text-transform: uppercase;
-        font-weight: bold; }
+      transition: transform 0.3s ease-in;
+      text-transform: uppercase;
+      font-weight: bold; }
     .contenedor__header .hedaer__btnCTA .btnCTA:hover {
       transform: scale(1.1);
       box-shadow: 0 0 5px yellow, 0 0 20px yellow,  0 0 40px yellow,  0 0 20px yellow; }
@@ -79,6 +79,66 @@
         display: flex;
         justify-content: center;
         align-items: center; }
+
+@media (max-width: 768px) {
+  .contenedor__header {
+    padding: 1rem;
+    justify-items: center;
+    align-items: center;
+    width: 100vw;
+    height: auto;
+    display: grid;
+    grid-template-rows: auto auto;
+    /* Dos filas, la primera se ajusta automáticamente y la segunda también */
+    grid-template-columns: 50% 50%;
+    /* Una columna */
+    gap: 10px;
+    /* Espacio entre los elementos */ }
+    .contenedor__header .header__timer {
+      width: auto;
+      font-size: 1.5em;
+      grid-row: 2;
+      /* Coloca el segundo elemento en la segunda fila */
+      grid-column: 1;
+      text-align: center; }
+    .contenedor__header #temporizador {
+      display: flex;
+      justify-content: flex-end; }
+      .contenedor__header #temporizador .borde {
+        margin: 0rem 0.5rem;
+        width: 3rem;
+        height: 3rem; }
+  .hedaer__btnCTA {
+    grid-row: 2;
+    /* Coloca el tercer elemento en la segunda fila */
+    grid-column: 2;
+    display: flex;
+    justify-content: flex-start;
+    width: auto; }
+  .header__promesa {
+    grid-row: 1;
+    grid-column: 1 / span 2;
+    width: 100%;
+    justify-content: center; }
+    .header__promesa p {
+      justify-content: center; } }
+
+@media (max-width: 425px) {
+  .contenedor__header {
+    display: flex;
+    flex-direction: column;
+    height: 20rem;
+    justify-content: space-around; }
+    .contenedor__header .header__timer {
+      order: 2; }
+    .contenedor__header .hedaer__btnCTA {
+      order: 3; }
+    .contenedor__header .header__promesa {
+      width: 100vw;
+      height: auto;
+      order: 1;
+      text-align: center;
+      font-size: 1rem; } }
 
 .contenedor__main {
   display: flex;
@@ -140,6 +200,29 @@
     .main__presentacion .vsl iframe {
       box-shadow: 0 0 65px 10px blue; }
 
+@media (max-width: 768px) {
+  .main__presentacion {
+    max-width: 100vw; }
+    .main__presentacion .vsl iframe {
+      width: 700px;
+      height: 395px; } }
+
+@media (max-width: 425px) {
+  .main__presentacion {
+    max-width: 100vw; }
+    .main__presentacion p {
+      font-size: 1rem; }
+    .main__presentacion .redes {
+      width: 15em; }
+      .main__presentacion .redes .redes__item {
+        justify-content: center;
+        align-items: center;
+        width: 3rem;
+        height: 3rem; }
+    .main__presentacion .vsl iframe {
+      width: 354px;
+      height: 200px; } }
+
 .main__socialProof {
   display: flex;
   flex-direction: column;
@@ -179,9 +262,14 @@
       border: 0.2rem solid #204473;
       border-radius: 1rem;
       background-color: #0B1926; }
-      .main__socialProof .socialProof__cards .card img {
-        width: 90%;
-        height: 10rem; }
+      .main__socialProof .socialProof__cards .card .conteiner__img {
+        border-radius: 50%;
+        width: 10rem;
+        height: 10rem;
+        background-size: cover;
+        background-position: center;
+        background-image: url(../img/cliente1.jpg);
+        box-shadow: 0 0 15px 5px blue; }
       .main__socialProof .socialProof__cards .card h2 {
         color: white;
         font-size: 1.5rem;
@@ -212,6 +300,30 @@
       .main__socialProof .socialProof__cards .card .btn:hover {
         transform: scale(1.1);
         box-shadow: 0 0 5px yellow, 0 0 20px yellow,  0 0 40px yellow,  0 0 20px yellow; }
+
+@media (max-width: 768px) {
+  .main__socialProof {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* Centra horizontalmente */ }
+    .main__socialProof .socialProof__cards {
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      .main__socialProof .socialProof__cards .card {
+        margin: 1rem;
+        height: 35rem;
+        width: 25rem; } }
+
+@media (max-width: 425px) {
+  .main__socialProof h3 {
+    font-size: 1.5rem; }
+  .main__socialProof .socialProof__cards .card {
+    margin: 1rem;
+    height: 30rem;
+    width: 20rem; } }
 
 .main__calendario {
   display: flex;
@@ -294,7 +406,9 @@
       font-weight: 500;
       text-align: center;
       text-transform: uppercase; }
-    .contenedor__footer .footer__newsletter .newsletter button {
+    .contenedor__footer .footer__newsletter .displaySmall, .contenedor__footer .footer__newsletter .displayXSmall {
+      display: none; }
+    .contenedor__footer .footer__newsletter button {
       font-size: 1.1rem;
       font-weight: bold;
       background-color: yellow;
@@ -305,3 +419,58 @@
       text-align: center;
       text-transform: uppercase;
       border: none; }
+
+@media (max-width: 768px) {
+  .contenedor__footer .footer__info .footer__logo img {
+    width: 3rem;
+    height: 3rem; }
+  .contenedor__footer .footer__info .footer__logo span {
+    font-size: 1.2rem; }
+  .contenedor__footer .footer__redes {
+    width: 20em; }
+    .contenedor__footer .footer__redes .lista__item {
+      width: 2rem;
+      height: 2rem; }
+  .contenedor__footer .footer__newsletter {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around; }
+    .contenedor__footer .footer__newsletter .displayBig, .contenedor__footer .footer__newsletter .displayXSmall {
+      display: none; }
+    .contenedor__footer .footer__newsletter .displaySmall {
+      display: block; } }
+
+@media (max-width: 425px) {
+  .contenedor__footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around; }
+    .contenedor__footer .footer__info {
+      order: 3;
+      display: flex;
+      flex-direction: column;
+      justify-self: center; }
+      .contenedor__footer .footer__info .footer__logo {
+        display: flex;
+        flex-direction: row;
+        justify-content: center; }
+        .contenedor__footer .footer__info .footer__logo img {
+          width: 3rem;
+          height: 3rem; }
+        .contenedor__footer .footer__info .footer__logo span {
+          font-size: 1.2rem; }
+    .contenedor__footer .footer__redes {
+      order: 2;
+      width: 25em; }
+      .contenedor__footer .footer__redes .lista__item {
+        width: 2.5rem;
+        height: 2.5rem; }
+    .contenedor__footer .footer__newsletter {
+      order: 1;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around; }
+      .contenedor__footer .footer__newsletter .displaySmall {
+        display: none; }
+      .contenedor__footer .footer__newsletter .displayXSmall {
+        display: block; } }
