--- a/sass/parciales/_footer.scss
+++ b/sass/parciales/_footer.scss
@@ -34,46 +34,6 @@
             font-weight: 500
         }
     }
-    // .footer__redes{
-    //     @include conteiner-flex-row;
-    //     flex: 2;
-    //     align-items: center;
-    //     .redes__lista{
-    //         @include conteiner-flex-row;
-    //         justify-content: center;
-    //         width: 100%;
-    //         align-items: center;
-    //         .lista__item{
-    //             list-style: none;
-    //             align-items: center;
-    //             justify-content: center;
-    //             align-items: center;
-    //             padding: 1rem 1rem;
-    //             i{
-    //                 align-items: center;
-    //                 justify-content: center;
-    //                 color: black;
-    //                 background-color: yellow;
-    //                 width: 2rem;
-    //                 height: 2rem;
-    //                 border-radius: 0.5rem;
-    //                 font-size: 2rem;
-    //                 text-align: center;
-    //                 cursor: pointer;
-    //             }
-    //             i:hover{
-    //                 transition: 0.3s ease-in;
-    //                 font-size: 2.2rem;
-    //                 box-shadow: 0 0 5px yellow,
-    //                 0 0 25px yellow, 
-    //                 0 0 50px yellow, 
-    //                 0 0 100px yellow;
-                    
-    //             }
-    //         }
-    //     }
-
-    // }
 
     .footer__redes{
         @include conteiner-flex-row;
@@ -112,18 +72,104 @@
             text-align: center;
             text-transform: uppercase;
         }
-        .newsletter{
-            button{
-                font-size: 1.1rem;
-                font-weight: bold;
-                background-color: yellow;
-                border-radius: 0.5rem;
-                padding: 0.2rem 0.2rem;
-                color: black;
-                cursor: pointer;
-                text-align: center;
-                text-transform: uppercase;
-                border: none;
+        .displaySmall, .displayXSmall{
+            display:none;
+        }
+        button{
+            font-size: 1.1rem;
+            font-weight: bold;
+            background-color: yellow;
+            border-radius: 0.5rem;
+            padding: 0.2rem 0.2rem;
+            color: black;
+            cursor: pointer;
+            text-align: center;
+            text-transform: uppercase;
+            border: none;
+        }
+    }
+}
+
+@media (max-width: 768px){
+    .contenedor__footer{
+        .footer__info{
+            .footer__logo{
+                img{
+                    width: 3rem;
+                    height: 3rem;
+                }
+                span{
+                    font-size: 1.2rem;
+                }
+            }
+        }
+    
+        .footer__redes{
+            width: 20em;
+            .lista__item{
+                width: 2rem;
+                height: 2rem;
+            }
+        }
+    
+        .footer__newsletter{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            .displayBig, .displayXSmall{
+                display:none;
+            }
+            .displaySmall{
+                display: block;
+            }
+            
+        }
+    }
+}
+
+@media (max-width: 425px){
+    .contenedor__footer{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        .footer__info{
+            order: 3;
+            display: flex;
+            flex-direction: column;
+            justify-self: center;
+            .footer__logo{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                img{
+                    width: 3rem;
+                    height: 3rem;
+                }
+                span{
+                    font-size: 1.2rem;
+                }
+            }
+        }
+    
+        .footer__redes{
+            order: 2;
+            width: 25em;
+            .lista__item{
+                width: 2.5rem;
+                height: 2.5rem;
+            }
+        }
+    
+        .footer__newsletter{
+            order: 1;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            .displaySmall{
+                display:none;
+            }
+            .displayXSmall{
+                display: block;
             }
         }
     }
