--- a/sass/parciales/_mainPresentacion.scss
+++ b/sass/parciales/_mainPresentacion.scss
@@ -58,3 +58,39 @@
 
     
 }
+
+@media (max-width: 768px){
+    .main__presentacion{
+        max-width: 100vw;
+        .vsl{
+            iframe{
+                width: 700px;
+                height: 395px;
+            }
+        }
+    }
+}
+
+@media (max-width: 425px){
+    .main__presentacion{
+        max-width: 100vw;
+        p{
+            font-size: 1rem;
+        }
+        .redes{
+            width: 15em;
+            .redes__item{
+                justify-content: center;
+                align-items: center;
+                width: 3rem;
+                height: 3rem;
+            }
+        }
+        .vsl{
+            iframe{
+                width: 354px;
+                height: 200px;
+            }
+        }
+    }
+}
