--- a/sass/parciales/_socialProof.scss
+++ b/sass/parciales/_socialProof.scss
@@ -32,12 +32,12 @@
             border-radius: 1rem;
             background-color: $color-fondo;
             .conteiner__img{
-                border-radius: 50%;
-                width: 10rem;
+                border-radius: 0.5rem;
+                width: 17rem;
                 height: 10rem;
                 background-size: cover;
                 background-position: center;
-                background-image: url(../img/cliente1.jpg);
+                background-image: url(../img/portadaFDM.jpeg);
                 box-shadow: 0 0 15px 5px blue;
             }
             h2{
