--- a/sass/parciales/_footer.scss
+++ b/sass/parciales/_footer.scss
@@ -132,6 +132,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+        height: auto;
         .footer__info{
             order: 3;
             display: flex;
@@ -153,23 +154,28 @@
     
         .footer__redes{
             order: 2;
-            width: 25em;
+            width: 100vw;
+            justify-content: space-around;
             .lista__item{
-                width: 2.5rem;
-                height: 2.5rem;
+                width: 2rem;
+                height: 2rem;
             }
         }
     
         .footer__newsletter{
             order: 1;
+            height: 15rem;
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             justify-content: space-around;
             .displaySmall{
                 display:none;
             }
             .displayXSmall{
                 display: block;
+            }
+            .btn2{
+                margin-top: 0.5rem;
             }
         }
     }
