--- a/sass/parciales/_mainPresentacion.scss
+++ b/sass/parciales/_mainPresentacion.scss
@@ -74,6 +74,7 @@
 @media (max-width: 425px){
     .main__presentacion{
         max-width: 100vw;
+        padding: 0.3rem;
         p{
             font-size: 1rem;
         }
