--- a/sass/parciales/_socialProof.scss
+++ b/sass/parciales/_socialProof.scss
@@ -1,6 +1,6 @@
 .main__socialProof{
     @include conteiner-flex-column;
-    height: 100vh;
+    height: auto;
     align-items: center;
     justify-content: space-around;
     overflow: hidden;
@@ -10,6 +10,7 @@
         color: white;
         text-align: center;
         font-weight: 500;
+        padding: 2rem;
         span{
             background-color: yellow;
             font-weight: bold;
@@ -23,16 +24,18 @@
         justify-content: space-around;
         .card{
             @include conteiner-flex-column;
-            height: 30rem;
+            height: auto;
             width: 20rem;
             align-items: center;
             text-align: center;
             padding: 0.5rem;
+            margin: 0;
             border: 0.2rem solid $color-elementos;
             border-radius: 1rem;
             background-color: $color-fondo;
             .conteiner__img{
                 border-radius: 0.5rem;
+                padding-bottom: 1rem;
                 width: 17rem;
                 height: 10rem;
                 background-size: cover;
@@ -44,6 +47,7 @@
                 color: white;
                 font-size: 1.5rem;
                 font-weight: 500;
+                padding: 2rem;
                 span{
                     text-transform: uppercase;
                     background-color: $color-fuente1;
@@ -53,12 +57,26 @@
                     padding: 0.2rem 0.2rem;
                 }
             }
-            p{
+            .parrafo{
                 color: white;
                 text-transform: uppercase;
-                text-align: center;
+                overflow: hidden;
+                transition: height 0.3s ease;
+                height: 100px; /* Altura inicial del párrafo */
+                }
+            .more {
+                display: block;
+                margin-bottom: 10px;
+                cursor: pointer;
+                font-weight: 500;
+                border: none;
+                border-radius: 0.5rem;
+                padding: 0.2rem 0.2rem;
+                background-color: $color-elementos;
+                color:white;
+                font-size: 1.2rem;
             }
-            button{
+            .btn{
                 font-size: 1.2em;
                 font-weight: bold;
                 background-color: yellow;
@@ -93,9 +111,10 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            height: auto;
             .card{
                 margin: 1rem;
-                height: 35rem;
+                height: auto;
                 width: 25rem;
             }
         }
@@ -104,14 +123,19 @@
 
 @media (max-width: 425px){
     .main__socialProof{
+        height: auto;
         h3{
             font-size: 1.5rem;
         }
         .socialProof__cards{
+            height: auto;
             .card{
                 margin: 1rem;
-                height: 30rem;
+                height: auto;
                 width: 20rem;
+                .parrafo{
+                    height: 100px;
+                }
             }
         }
     }
